// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`map-config Should get /defra-map/config successfully when env is dev 1`] = `
{
  "OS_ACCOUNT_NUMBER": "AC0000807064",
  "agolServiceUrl": "https://services1.arcgis.com/DUMMY_SERVICE_ID/arcgis/rest/services",
  "agolVectorTileUrl": "https://tiles.arcgis.com/tiles/DUMMY_SERVICE_ID/arcgis/rest/services",
  "featureLayerNameSuffix": "_NON_PRODUCTION",
  "layerNameSuffix": "_NON_PRODUCTION",
  "version": "925617123",
}
`;

exports[`map-config Should get /defra-map/config successfully when env is local 1`] = `
{
  "OS_ACCOUNT_NUMBER": "AC0000807064",
  "agolServiceUrl": "https://services1.arcgis.com/DUMMY_SERVICE_ID/arcgis/rest/services",
  "agolVectorTileUrl": "https://tiles.arcgis.com/tiles/DUMMY_SERVICE_ID/arcgis/rest/services",
  "featureLayerNameSuffix": "_NON_PRODUCTION",
  "layerNameSuffix": "_NON_PRODUCTION",
  "version": 1770024023142,
}
`;
